--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,7 @@
         <div class="results">
             <h2>Climate Prediction:</h2>
             <p>{{ clima }}</p>
+            <img src="{{ heatmap_url }}" alt="Heat Gauge">
         </div>
         {% endif %}
 
